feat: fixed mongodb connection, created basic user schema, implemented user crud
