# server/api/controllers/users/router.ts
@@ -4,4 +4,5 @@ export default express
   .Router()
   .post('/', controller.create)
   .get('/', controller.all)
-  .get('/:id', controller.byId);
+  .get('/:id', controller.byId)
+  .put('/:id', controller.update);
