# server/routes.ts
@@ -1,5 +1,6 @@
 import { Application } from 'express';
-import examplesRouter from './api/controllers/examples/router';
+import userssRouter from './api/controllers/users/router';
+
 export default function routes(app: Application): void {
-  app.use('/api/v1/examples', examplesRouter);
+  app.use('/api/v1/users', userssRouter);
 }
